--- a/index.html
+++ b/index.html
@@ -90,15 +90,14 @@
     const msg = document.getElementById("msg");
 
     noBtn.addEventListener("mouseover", () => {
-      const card = document.querySelector(".card");
-      const cardRect = card.getBoundingClientRect();
-
-      const maxX = cardRect.width - noBtn.offsetWidth;
-      const maxY = cardRect.height - noBtn.offsetHeight;
+      // Move the No button far away anywhere on the screen
+      const maxX = window.innerWidth - noBtn.offsetWidth;
+      const maxY = window.innerHeight - noBtn.offsetHeight;
 
       const randomX = Math.random() * maxX;
       const randomY = Math.random() * maxY;
 
+      noBtn.style.position = "fixed";
       noBtn.style.left = randomX + "px";
       noBtn.style.top = randomY + "px";
     });
