--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
     }
 
     button {
-      padding: 12px 24px;
+      padding: 18px 40px;
       border: none;
-      border-radius: 10px;
-      font-size: 16px;
+      border-radius: 14px;
+      font-size: 22px;
+      font-weight: bold;
       cursor: pointer;
       transition: 0.3s;
       position: absolute;
