--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
     }
 
     button {
-      padding: 18px 40px;
+      padding: 12px 24px;
       border: none;
-      border-radius: 14px;
-      font-size: 22px;
-      font-weight: bold;
+      border-radius: 10px;
+      font-size: 16px;
       cursor: pointer;
       transition: 0.3s;
       position: absolute;
@@ -91,14 +90,15 @@
     const msg = document.getElementById("msg");
 
     noBtn.addEventListener("mouseover", () => {
-      // Move the No button far away anywhere on the screen
-      const maxX = window.innerWidth - noBtn.offsetWidth;
-      const maxY = window.innerHeight - noBtn.offsetHeight;
+      const card = document.querySelector(".card");
+      const cardRect = card.getBoundingClientRect();
+
+      const maxX = cardRect.width - noBtn.offsetWidth;
+      const maxY = cardRect.height - noBtn.offsetHeight;
 
       const randomX = Math.random() * maxX;
       const randomY = Math.random() * maxY;
 
-      noBtn.style.position = "fixed";
       noBtn.style.left = randomX + "px";
       noBtn.style.top = randomY + "px";
     });
