Change message on 'Yes' button click
Updated the message displayed when the 'Yes' button is clicked.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <button id="no">No</button>
     </div>
 
-    <div class="message" id="msg">Yay!!! ❤️ You made my day!</div>
+    <div class="message" id="msg">Ab hoga saxxx <3!!!</div>
   </div>
 
   <script>
@@ -109,3 +109,4 @@
   </script>
 </body>
 </html>
+
